<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".Login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/renit"
                    android:textColor="@android:color/white"
                    android:textSize="70sp"
                    android:gravity="center"
                    />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">


            <EditText
                android:id="@+id/mobileNumberOrEmail_login"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/account"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_light"
                android:hint="Email or phone"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/password_login"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobileNumberOrEmail_login"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp" />


            <Button
                android:id="@+id/signIn_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_login"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_corners"
                android:text="Sign in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signIn_btn_login"
                android:layout_alignRight="@id/signIn_btn_login"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:fontFamily="@font/lato_regular"
                android:text="@string/forget_password" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3" />

            <RelativeLayout
                android:id="@+id/continueWith_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_30"
                android:gravity="center_vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/textColor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/white"
                    android:fontFamily="@font/lato_light"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/textColor" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/facebook_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/continueWith_layout"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/facebook_button"
                    android:text="@string/facebook"
                    android:textColor="@color/facebook" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/google_button"
                    android:text="@string/google"
                    android:textColor="@color/google" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/facebook_google"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/lato_light"
                    android:text="Don't have an account?"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text=" Sign up"
                    android:id="@+id/signup_login_"/>

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</layout>
