<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        tools:context=".SignUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/person_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:drawableLeft="@drawable/account"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_full_name"
                    android:paddingBottom="10dp"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/email_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_email_id"
                    android:paddingBottom="10dp"/>


                <EditText
                    android:layout_weight="1"
                    android:id="@+id/phone_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_mobile_number"
                    android:paddingBottom="10dp"/>
            </LinearLayout>


LinearLayout
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/otp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"

                android:fontFamily="@font/lato_light"
                android:text="enter_otp_sent_to_adove_given_number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:inputType="numberPassword"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/dp_20" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:text="00:23" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="resent_otp"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/signupNow_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/button_corners"
                    android:fontFamily="@font/lato_light"
                    android:text="sign_up_now"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signupNow_signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="Forget Password"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forget_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/by_signing_up_you_are_agree_to_our"
                    android:textSize="12sp" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
